# MatrixChain

./: CMakeLists.txt  README.md
.github/workflows/: workflow.yml
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_generate.py
benchmark/in/: benchmark.in  sizes.in
inc/: matrix_chain.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  benchmark_generate.py  end2end  test.cpp  test_generate.py
tests/end_to_end/in/: 3test.in  4test.in  5test.in
tests/in/: 1test.in  2test.in  3test.in  4test.in  5test.in
